<resources>

    <string name="app_name">Happy Birthday!!!</string>
    <string name="textView">As beautiful as the lilies,,may your day be...</string>
    <string name="textView1">Happy Birthday UTIBE ETIM!!!</string>
    <string name="textView2">From, Jemima...</string>
    <string name="Button">CLICK HERE FOR MORE WISHES!</string>
    <string name="textView9">* May the blessings of heaven pour on you each day! *</string>
    <string name="textView10">* May all your dreams and heart desires come true! *</string>
    <string name="textView11">* May more years of success, happiness and grace be added to you! *</string>
    <string name="textView12">* May your life shine light everywhere you go! *</string>
    <string name="textView13">* May you find love and peace! *</string>

</resources>
