<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/cake"
    tools:context=".Main2Activity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/textView9"
            android:textStyle="italic"
            android:fontFamily="sans-serif-black"
            android:textColor="@color/greyy"
            android:textSize="20sp"
            />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/textView10"
            android:textStyle="italic"
            android:fontFamily="sans-serif-black"
            android:textColor="@color/greyy"
            android:textSize="20sp"
            />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:fontFamily="sans-serif-black"
            android:text="@string/textView11"
            android:textColor="@color/greyy"
            android:textSize="20sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/textView12"
            android:textStyle="italic"
            android:fontFamily="sans-serif-black"
            android:textColor="@color/greyy"
            android:textSize="20sp"
            />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/textView13"
            android:textStyle="italic"
            android:fontFamily="sans-serif-black"
            android:textColor="@color/greyy"
            android:textSize="20sp"
            />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>